--- a/src/App.css
+++ b/src/App.css
@@ -43,14 +43,14 @@ div{
 
 
 body {
-  /* background-image: linear-gradient(140deg, rgb(207, 47, 152), rgb(106, 61, 236)); */
-  background-color: var(--color-1);
+  background: linear-gradient(140deg, rgb(150, 34, 110), rgb(75, 43, 118));
+  background: var(--color-1);
   color: var(--color-5)!important;
 }
 
 .aside {
   /* background-image: linear-gradient(140deg, rgb(207, 47, 152), rgb(106, 61, 236)); */
-  background-color: var(--color-1);
+  background: var(--color-1);
   background: transparent;
   height: 100vh;
   order: 1;
@@ -265,7 +265,11 @@ a:hover {
   text-align: center;
   border-radius: 15px !important;
 }
-
+.doc-title{
+  background: linear-gradient(-120deg, #fcb045 ,  #23d18b)!important;
+  color: var(--color-1)!important;
+  font-family: cursive!important;
+}
 .tog-butn{
   display: none;
 }
@@ -280,6 +284,27 @@ a:hover {
 
 .profile p {
   font-size: 15px;
+}
+
+.logo{
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.logo img{
+  width: 10vw;
+  margin: auto;
+}
+.logo h1{
+  font-size: 3.5vw;
+  margin: 0;
+  color: var(--color-5);
 }
 
 .support-button {
@@ -356,6 +381,16 @@ a:hover {
   .sidebar-sticky {
       all: unset;
   }
+  .logo{
+    width: 20vw;
+    margin: 0;
+  }
+  .logo h1{
+    display: none;
+  }
+  .logo img{
+    width: 50px
+  }
   .main-image svg{
     width: 200px;
     height: 100px;
@@ -392,7 +427,7 @@ a:hover {
   }
 
   .main-body {
-      height: 78.5vh;
+      height: 85vh;
       padding: 0;
       margin: 0;
   }
@@ -424,12 +459,17 @@ a:hover {
       height: 2px;
       border-radius: 2px;
   }
-
+  .nav-div{
+    margin-top: 50px;
+  }
   .post{
       width: 100vw;
       /* margin: 10px; */
       margin-top: 15px!important;
       padding: 10px!important;
+  }
+  .main{
+    margin-top: 50px;
   }
   .post >p{
       font-size: 12px;
@@ -456,6 +496,7 @@ a:hover {
       /* border: 2px solid var(--color-5) !important; */
       border-radius: 7px;
       outline: none;
+      font-size: 15px!important;
   }
   .top-section{
     display: flex;
@@ -463,16 +504,66 @@ a:hover {
     flex-direction: row-reverse;
     align-items: center;
   }
+  .post{
+    padding:10px 0!important;
+    border-radius: 0!important;
+  }
+  .post-image{
+    width: 100%!important;
+    margin: 0!important;
+    padding: 0!important;
+  }
+  .top-section button{
+    margin-top: 10px!important;
+    margin-bottom: 0!important;
+  }
   .chat-container{
-    height: 89vh!important;
+    height: 93vh!important;
+  }
+  .user-image{
+    width: 45px!important;
+    height: 45px!important;
+  }
+  .user-info{
+    font-size: 12px!important;
+  }
+  .tracker button h6{
+    font-size: 13px!important;
+  }
+  .user-info h5{
+    font-size: 17px!important;
   }
   .nav-div svg {
       width: 20px;
       margin-right: 5px;
   }
-
-  .links {
-      height: 3rem;
+  .user-details h2{
+    font-size: 25px!important;
+  }
+  .top-section{
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+    background-color: var(--color-1);
+  }
+  .profile-image{
+    width: 90px!important;
+    height: 90px!important;
+    top: -35px!important;
+  }
+  .bio p{
+    font-size: 12px!important;
+    margin-top: 20px!important;
+  }
+  .message{
+    font-size: 13px!important;
+  }
+  .links{
+    height: 3rem;
+  }
+  .links a{
+      font-size: 13px!important;
+      margin-bottom: 0!important;
   }
 
   .not-in-mobile {
